Added form actions

--- a/Form.html
+++ b/Form.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stack Overflow Form</title>
+    <link rel="stylesheet" href="./StyleSheet/form.css">
 </head>
 <body>
     <h1>Redux Overflow Form</h1>
-    <form action="/submit" method="post">
+    <form action="welcome.html" method="get">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" required><br><br>
 
