Massive Commit after a long time

--- a/Ex1/index.html
+++ b/Ex1/index.html
@@ -86,6 +86,9 @@
         <pre>
 &lt;meta http-equiv="refresh" content="5"&gt;
         </pre>
+        <h1>Click the Button to Refresh the Page</h1>
+    
+    <button onclick="window.location.reload();">Refresh Page</button>
         <p>Explanation: The above code would refresh the page every 5 seconds. This is often used in situations where you want to reload a page periodically or redirect after a certain time.</p>
     </section>
 </body>
